--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -50,7 +50,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/music"
+            android:src="@drawable/headphone"
             android:scaleType="centerCrop"
             android:id="@+id/cover_art"/>
             <ImageView
@@ -112,7 +112,8 @@
             android:layout_centerHorizontal="true"
             android:layout_toLeftOf="@id/play_pause"
             tools:ignore="RtlCompat" />
-        
+
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
